--- a/templates/default/style/light.css
+++ b/templates/default/style/light.css
@@ -190,3 +190,8 @@ input[type=number]::-webkit-outer-spin-button {
     color: #212529;
     border: none;
 }
+
+/* RDAP and WHOIS results styling */
+.rdap-results pre, .whois-results pre {
+    font-size: 0.75rem !important;
+}
